--- a/ShoSato_Activity_4_(2025)_Likelihoods.ipynb
+++ b/ShoSato_Activity_4_(2025)_Likelihoods.ipynb
@@ -33,7 +33,7 @@
       "metadata": {
         "id": "6vJQZfXMCzZa"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "id": "fpNKlI5zteIe",
         "outputId": "314e3bf5-0706-4685-8a05-acf32f8ec548"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -225,7 +225,7 @@
         "id": "4zj-kk9ltu-e",
         "outputId": "42c63c75-2aa1-426f-b76c-ec9699196c03"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "Ieuv67yoEl63"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,7 +318,7 @@
         "id": "eXk-HBfyEtlk",
         "outputId": "31b5119e-603b-4fbd-972c-f23e1d693f79"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -370,7 +370,7 @@
       "metadata": {
         "id": "uGMadeuP2Wc2"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "id": "BovkxZ-rF3Yc",
         "outputId": "5d88f228-b63c-41b6-9e92-18bd087bbd88"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -469,7 +469,7 @@
         },
         "outputId": "df7d2cf1-d52d-4a6c-ead5-652786acd4f6"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -509,7 +509,7 @@
         "id": "iQvebbHSHAcr",
         "outputId": "1eee4dc9-b7cf-46dc-9d66-aa903380e99a"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -541,7 +541,7 @@
         "id": "fz0e-fHeGNB3",
         "outputId": "d827b22c-19b4-4429-da9c-6df8c3cf5c44"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -607,7 +607,7 @@
         "id": "L1P1rc5NuKqj",
         "outputId": "bb7ebdc9-aeb3-4e67-a541-a5dbf586fe00"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -691,7 +691,7 @@
         "id": "xd9QvJFjuf8S",
         "outputId": "52f44c48-6d41-4d30-dbee-8778f636a9c8"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -743,7 +743,7 @@
         "id": "T9aWX8Szvt6v",
         "outputId": "9ba83dba-049e-4789-8898-d5b6040701e0"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -792,7 +792,7 @@
       "metadata": {
         "id": "XZ3EyPz_67kb"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -808,7 +808,7 @@
         "id": "JwO-dmep-ZMQ",
         "outputId": "0585d6c9-5afe-4a4b-b40c-1d77a5e487e0"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -851,7 +851,7 @@
         },
         "outputId": "640dd8aa-bc54-4baa-f906-052b696ca892"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -934,7 +934,7 @@
         "id": "naxxbiIB_cR8",
         "outputId": "20ead474-5d67-45d4-f2bf-4dbdd34cd2e1"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1040,7 +1040,7 @@
         "id": "QLRMzrjmBALb",
         "outputId": "5a96e138-51f7-4331-f458-e0eea0b24bad"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1089,7 +1089,7 @@
         "id": "4uVkZ0boBPtI",
         "outputId": "ef32161e-feee-4040-a2bf-0be2ce47b235"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1179,7 +1179,7 @@
         "id": "GLzy342ACjJM",
         "outputId": "4e9273f8-c433-475d-87e6-ebf1314e0a5b"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1211,7 +1211,7 @@
         "id": "72LiROAWCraN",
         "outputId": "ff213203-6abf-4749-b4f4-b6cf470a00fb"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1243,7 +1243,7 @@
         "id": "3nSajOVFC2FB",
         "outputId": "04eec205-536c-48ad-dc11-849b0628fbce"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1282,22 +1282,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***There is no evidence to support a \"hot hand\" (p = 0.8537).***"
+        "***There is no evidence to support the null hypothesis (large model). In the other words, there is no evidence to support a \"hot hand\" (p = 0.8537).***"
       ],
       "metadata": {
         "id": "hETHwU6nDM_e"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Am I suppose to use thie p-value to make this conclusion . . .?"
-      ],
-      "metadata": {
-        "id": "Sq1jLUQ1Z8ob"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
